don't use groups in philosophers example
this patch removes spawn_in_group from the dining philosophers example
to keep the example more focused and simple

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -15,7 +15,7 @@ add(announce_3 type_system)
 add(announce_4 type_system)
 add(announce_5 type_system)
 add(dancing_kirby message_passing)
-add(dining_philosophers event_based_api)
+add(dining_philosophers message_passing)
 add(hello_world .)
 add(math_actor message_passing)
 add(distributed_math_actor remote_actors)
