modified all examples do use event-based API only

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,8 +17,8 @@ add(announce_5 type_system)
 add(dancing_kirby message_passing)
 add(dining_philosophers message_passing)
 add(hello_world .)
-add(math_actor message_passing)
-add(distributed_math_actor remote_actors)
+add(calculator message_passing)
+add(distributed_calculator remote_actors)
 add(group_server remote_actors)
 add(group_chat remote_actors)
 
