added examples for spawn_cl
a simple examples using vectors and a more complex one
using a matrix class

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -46,3 +46,14 @@ if (NOT "${CPPA_NO_QT_EXAMPLES}" STREQUAL "yes")
     add_dependencies(qt_group_chat all_examples)
   endif (QT4_FOUND)
 endif()
+
+if (ENABLE_OPENCL)
+  macro(add_opencl name folder)
+    add_executable(${name} ${folder}/${name}.cpp ${ARGN})
+    target_link_libraries(${name} ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES} ${OPENCL_LIBRARIES})
+    add_dependencies(${name} all_examples)
+  endmacro()
+
+  add_opencl(simple_matrix opencl)
+  add_opencl(proper_matrix opencl)
+endif (ENABLE_OPENCL)
