revised middleman layer
this patch removes the possibility to add more than one protocol to a
middleman, because this would most likely break any distributed actor system;
instead, this patch prepares libcppa for allowing user-defined middlemans;
furthermore, this patch establishes a more straightforward parent-child relation
between the middleman and its protocol and added the buffered_writer class
to ease development of asynchronous IO classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ set(LIBCPPA_SRC
     src/binary_deserializer.cpp
     src/binary_serializer.cpp
     src/buffer.cpp
+    src/buffered_writer.cpp
     src/channel.cpp
     src/context_switching_actor.cpp
     src/continuable_io.cpp
