streamlined broker implementation
this patch changes the broker implementation, i.e., provides a single
broker class for both accept and I/O brokers

--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -26,6 +26,7 @@ add_unit_test(spawn ping_pong.cpp)
 add_unit_test(local_group)
 add_unit_test(sync_send)
 add_unit_test(remote_actor ping_pong.cpp)
+add_unit_test(broker)
 
 if (ENABLE_OPENCL)
   add_unit_test(opencl)
