trivariant => optional_variant
this patch replaces trivariant with optional_variant which can offer the
same semantics when used as optional_variant<void,...>

--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -12,7 +12,7 @@ endmacro()
 
 add_unit_test(ripemd_160)
 add_unit_test(atom)
-add_unit_test(trivariant)
+add_unit_test(optional_variant)
 add_unit_test(metaprogramming)
 add_unit_test(intrusive_containers)
 add_unit_test(serialization)
