updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-*.beam
-*.class
-*.dat
-*.dump
-*.png
-*.tmp
 *.DS_Store
 Doxyfile
-cppa.creator.user
+cppa.creator.user*
 html/
 build/*
 build-clang/*
 build-gcc/*
 manual/*
 Makefile
-benchmarks/*.txt
+bin/*
+lib/*
