renamed {protobuf => protobuf_broker}.cpp

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -22,6 +22,15 @@ add(distributed_calculator remote_actors)
 add(group_server remote_actors)
 add(group_chat remote_actors)
 
+find_package(Protobuf)
+if (PROTOBUF_FOUND)
+    PROTOBUF_GENERATE_CPP(ProtoSources ProtoHeaders "${CMAKE_CURRENT_SOURCE_DIR}/remote_actors/pingpong.proto")
+    include_directories(${PROTOBUF_INCLUDE_DIR})
+    add_executable(protobuf_broker remote_actors/protobuf_broker.cpp ${ProtoSources})
+    target_link_libraries(protobuf_broker ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES} ${PROTOBUF_LIBRARIES})
+    add_dependencies(protobuf_broker all_examples)
+endif (PROTOBUF_FOUND)
+
 find_package(CURL)
 if (CURL_FOUND)
     add_executable(curl_fuse curl/curl_fuse.cpp)
