added --no-protobuf-example configure option

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,9 +4,9 @@ project(cppa_examples CXX)
 add_custom_target(all_examples)
 
 macro(add name folder)
-    add_executable(${name} ${folder}/${name}.cpp ${ARGN})
-    target_link_libraries(${name} ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES})
-    add_dependencies(${name} all_examples)
+  add_executable(${name} ${folder}/${name}.cpp ${ARGN})
+  target_link_libraries(${name} ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES})
+  add_dependencies(${name} all_examples)
 endmacro()
 
 add(announce_1 type_system)
@@ -22,26 +22,26 @@ add(distributed_calculator remote_actors)
 add(group_server remote_actors)
 add(group_chat remote_actors)
 
-find_package(Protobuf)
-if (PROTOBUF_FOUND)
+if (NOT "${CPPA_NO_PROTOBUF_EXAMPLES}" STREQUAL "yes")
+  find_package(Protobuf)
+  if (PROTOBUF_FOUND)
     PROTOBUF_GENERATE_CPP(ProtoSources ProtoHeaders "${CMAKE_CURRENT_SOURCE_DIR}/remote_actors/pingpong.proto")
     include_directories(${PROTOBUF_INCLUDE_DIR})
     add_executable(protobuf_broker remote_actors/protobuf_broker.cpp ${ProtoSources})
     target_link_libraries(protobuf_broker ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES} ${PROTOBUF_LIBRARIES})
     add_dependencies(protobuf_broker all_examples)
-endif (PROTOBUF_FOUND)
+  endif (PROTOBUF_FOUND)
+endif ()
 
 find_package(CURL)
 if (CURL_FOUND)
-    add_executable(curl_fuse curl/curl_fuse.cpp)
-    target_link_libraries(curl_fuse ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES} ${CURL_LIBRARY})
-    add_dependencies(curl_fuse all_examples)
+  add_executable(curl_fuse curl/curl_fuse.cpp)
+  target_link_libraries(curl_fuse ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES} ${CURL_LIBRARY})
+  add_dependencies(curl_fuse all_examples)
 endif (CURL_FOUND)
 
 if (NOT "${CPPA_NO_QT_EXAMPLES}" STREQUAL "yes")
-
   find_package(Qt4)
-
   if (QT4_FOUND)
     include(${QT_USE_FILE})
     QT4_ADD_RESOURCES(GROUP_CHAT_RCS )
@@ -61,7 +61,7 @@ if (NOT "${CPPA_NO_QT_EXAMPLES}" STREQUAL "yes")
                           ${QT_LIBRARIES})
     add_dependencies(qt_group_chat all_examples)
   endif (QT4_FOUND)
-endif()
+endif ()
 
 if (ENABLE_OPENCL)
   macro(add_opencl name folder)
@@ -69,7 +69,6 @@ if (ENABLE_OPENCL)
     target_link_libraries(${name} ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES} ${OPENCL_LIBRARIES})
     add_dependencies(${name} all_examples)
   endmacro()
-
   add_opencl(simple_matrix opencl)
   add_opencl(proper_matrix opencl)
 endif (ENABLE_OPENCL)
