--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -24,6 +24,7 @@ add_unit_test(primitive_variant)
 add_unit_test(yield_interface)
 add_unit_test(tuple)
 add_unit_test(spawn ping_pong.cpp)
+add_unit_test(typed_spawn)
 add_unit_test(local_group)
 add_unit_test(sync_send)
 add_unit_test(remote_actor ping_pong.cpp)
