unified handling of timeout messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ if (CMAKE_CXX_FLAGS)
   set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "")
 else (CMAKE_CXX_FLAGS)
   set(CXXFLAGS_PROVIDED false)
-  set(CMAKE_CXX_FLAGS                "-std=c++11 -Wextra -Wall -pedantic -fno-omit-frame-pointer -fsanitize=address")
+  set(CMAKE_CXX_FLAGS                "-std=c++11 -Wextra -Wall -pedantic")
   set(CMAKE_CXX_FLAGS_DEBUG          "-O0 -g")
   set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os")
   set(CMAKE_CXX_FLAGS_RELEASE        "-O3 -DNDEBUG")
