--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,7 @@ set(LIBCPPA_SRC
     src/actor_namespace.cpp
     src/actor_proxy.cpp
     src/actor_registry.cpp
+    src/actor_ostream.cpp
     src/algorithm.cpp
     src/any_tuple.cpp
     src/atom.cpp
