renamed {util::fiber => detail::cs_thread}

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,7 @@ set(LIBCPPA_SRC
     src/context_switching_resume.cpp
     src/continuable.cpp
     src/continue_helper.cpp
+    src/cs_thread.cpp
     src/decorated_tuple.cpp
     src/actor_proxy.cpp
     src/peer.cpp
@@ -165,7 +166,6 @@ set(LIBCPPA_SRC
     src/exception.cpp
     src/exit_reason.cpp
     src/fd_util.cpp
-    src/fiber.cpp
     src/functor_based_actor.cpp
     src/functor_based_blocking_actor.cpp
     src/get_root_uuid.cpp
