--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,7 +17,9 @@ add(announce_5 type_system)
 add(dancing_kirby message_passing)
 add(dining_philosophers message_passing)
 add(hello_world .)
+add(aout .)
 add(calculator message_passing)
+add(typed_calculator message_passing)
 add(distributed_calculator remote_actors)
 add(group_server remote_actors)
 add(group_chat remote_actors)
